force-app/main/default/objects/Support_Ticket__c/Support_Ticket__c.object-meta.xml
<CustomObject>
    <label>Support_Ticket</label>
    <nameField>
        <label>Support_Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support_Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>