force-app/main/default/objects/Support_Ticket__c/fields/Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Closed_At__c</fullName>
    <label>Closed_At</label>
    <type>DateTime</type>
</CustomField>