force-app/main/default/objects/Support_Ticket__c/fields/Customer_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Issue_Count__c</fullName>
    <label>Customer_Issue_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>