force-app/main/default/objects/Support_Ticket__c/fields/Customer_Visible_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visible_Notes__c</fullName>
    <label>Customer_Visible_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>