force-app/main/default/objects/Support_Ticket__c/fields/Escalated_To_Ops__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Ops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated_To_Ops</label>
    <type>Checkbox</type>
</CustomField>