force-app/main/default/objects/Support_Ticket__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>