force-app/main/default/objects/Support_Ticket__c/fields/Issue_Source__c.field-meta.xml
<CustomField>
    <fullName>Issue_Source__c</fullName>
    <label>Issue_Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>