force-app/main/default/objects/Support_Ticket__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Issue</fullName>
            </value>
            <value>
                <fullName>Refund Request</fullName>
            </value>
            <value>
                <fullName>Order Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>