force-app/main/default/objects/Support_Ticket__c/fields/Reason_for_Issue__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Issue__c</fullName>
    <label>Reason for Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Item Missing</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Quantity Issue</fullName>
            </value>
            <value>
                <fullName>Package Damaged</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Order Not Placed</fullName>
            </value>
            <value>
                <fullName>No Delivery Agent Assigned</fullName>
            </value>
            <value>
                <fullName>Mistakenly Ordered</fullName>
            </value>
            <value>
                <fullName>Missing Items</fullName>
            </value>
            <value>
                <fullName>Wrong Order</fullName>
            </value>
            <value>
                <fullName>Bugs in Order Page</fullName>
            </value>
            <value>
                <fullName>Double Charged</fullName>
            </value>
            <value>
                <fullName>Refund Not Received</fullName>
            </value>
            <value>
                <fullName>Payment Failed But Amount Deducted</fullName>
            </value>
            <value>
                <fullName>Over Than MRP Price</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>