force-app/main/default/objects/Support_Ticket__c/fields/Recommended_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Refund_Amount__c</fullName>
    <label>Recommended_Refund_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>