force-app/main/default/objects/Support_Ticket__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information Provided</fullName>
            </value>
            <value>
                <fullName>Apology Issued</fullName>
            </value>
            <value>
                <fullName>Refund Initiated</fullName>
            </value>
            <value>
                <fullName>Replacement Order</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>