force-app/main/default/objects/Support_Ticket__c/validationRules/Closed_ticket_must_have_Resolution_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_ticket_must_have_Resolution_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Ticket_Status__c, &quot;CLOSED&quot;),
 ISPICKVAL(Resolution_Type__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Resolution_Type__c</errorDisplayField>
    <errorMessage>Resolution Type is required before closing a ticket.</errorMessage>
</ValidationRule>