force-app/main/default/objects/Support_Ticket__c/listViews/Customer_Service_Queue_Support_Ticket.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Queue_Support_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service Queue</label>
    <queue>Customer_Service_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>